# Cryonic-Engine

./: .gitignore  CryonicEngine.sln  README.md
CryonicEngine/: Animation.h  AnimationGraph.h  AssetManager.cpp  AssetManager.h  AsyncPBODisplay.cpp  AsyncPBODisplay.h  AudioClip.cpp  AudioClip.h  CanvasEditor.cpp  CanvasEditor.h  CollisionListener.cpp  CollisionListener.h  CollisionListener2D.cpp  CollisionListener2D.h  CollisionListener3D.cpp  CollisionListener3D.h  ConsoleLogger.cpp  ConsoleLogger.h  CryonicAPI.h  CryonicCore.cpp  CryonicCore.h  CryonicEngine.cpp  CryonicEngine.vcxproj  CryonicEngine.vcxproj.filters  Editor.cpp  Editor.h  EditorWindow.cpp  EditorWindow.h  Event.cpp  Event.h  EventSheetEditor.cpp  EventSheetEditor.h  EventSheetSystem.h  EventSystem.cpp  EventSystem.h  FileWatcher.cpp  FileWatcher.h  Font.h  FontManager.cpp  FontManager.h  (+44 more)
CryonicEngine/BuildPresets/: CMakeLists.txt  CMakesList.txt
CryonicEngine/BuildPresets/2D/: CMakeLists.txt
CryonicEngine/BuildPresets/3D/: CMakeLists Original.txt  CMakeLists.txt
CryonicEngine/BuildPresets/Source/: AsyncPBOCapture.cpp  AsyncPBOCapture.h  Game.cpp  Game.h  WindowsHelper.cpp  WindowsHelper.h  rlImGui.cpp  rlImGui.h
CryonicEngine/BuildPresets/Web/: Template.html
CryonicEngine/BuildPresets/Windows/: resource.rc.in
CryonicEngine/Components/: AnimationPlayer.cpp  AnimationPlayer.h  AudioPlayer.cpp  AudioPlayer.h  Button.cpp  Button.h  CameraComponent.cpp  CameraComponent.h  CanvasRenderer.cpp  CanvasRenderer.h  Collider2D.cpp  Collider2D.h  Collider3D.cpp  Collider3D.h  Component.cpp  Component.h  Image.cpp  Image.h  Label.cpp  Label.h  Lighting.cpp  Lighting.h  MeshRenderer.cpp  MeshRenderer.h  Rigidbody2D.cpp  Rigidbody2D.h  Rigidbody3D.cpp  Rigidbody3D.h  ScriptComponent.cpp  ScriptComponent.h  ScriptLoader.cpp  ScriptLoader.h  Skybox.cpp  Skybox.h  Spline.cpp  Spline.h  SpriteRenderer.cpp  SpriteRenderer.h  TilemapRenderer.cpp  TilemapRenderer.h
CryonicEngine/Components/Components/: CameraComponent.cpp  CameraComponent.h  Lighting.cpp  Lighting.h  MeshRenderer.cpp  MeshRenderer.h  ScriptComponent.cpp  ScriptComponent.h  ScriptLoader.cpp  ScriptLoader.h
CryonicEngine/GUI/: Element.h
CryonicEngine/Scenes/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
CryonicEngine/ScriptingTools/: ScriptHeaderGenerator.cpp  ScriptHeaderGenerator.h
CryonicEngine/resources/misc/: ScriptPreset 2D.h  ScriptPreset 3D.cpp  ScriptPreset 3D.h  ScriptPreset.cpp  ScriptPreset.h
CryonicEngine/resources/shaders/glsl330/: lighting with intensity.fs  shadowmap.fs  shadowmapv2.fs  shadowmapv2.vs
includes/imgui/: ImGuiNotify.hpp  ImGuiPopup.cpp  ImGuiPopup.h  rlImGui.cpp
includes/imnodes/: imnodes.cpp
includes/openssl/: cmp.h  configuration.h  core_names.h  crmf.h  crypto.h  fipskey.h  opensslv.h  pkcs12.h  ssl.h  x509.h  x509_acert.h  x509v3.h
libs/: box2d.lib  efsw.lib  libcrypto.lib  libcurl.lib
